force-app/main/default/objects/SpecificationBase__c/SpecificationBase__c.object-meta.xml
<CustomObject>
    <label>Specification Base</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Specifications Base</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>