force-app/main/default/objects/SpecificationBase__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Specifications Base</relationshipLabel>
    <relationshipName>Specifications_Base</relationshipName>
    <type>Lookup</type>
</CustomField>