force-app/main/default/objects/SpecificationBase__c/fields/ClientSpec__c.field-meta.xml
<CustomField>
    <fullName>ClientSpec__c</fullName>
    <label>Client Spec</label>
    <length>80</length>
    <type>Text</type>
</CustomField>