force-app/main/default/objects/SpecificationBase__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>SpecificationBase__c</referenceTo>
    <relationshipLabel>Specifications Base</relationshipLabel>
    <relationshipName>Specifications_Base</relationshipName>
    <type>Lookup</type>
</CustomField>