force-app/main/default/objects/SpecificationBase__c/fields/ParentSpecID__c.field-meta.xml
<CustomField>
    <fullName>ParentSpecID__c</fullName>
    <label>ParentSpecID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>