force-app/main/default/objects/SpecificationBase__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Type</label>
    <referenceTo>WheelProdType__c</referenceTo>
    <relationshipLabel>Specifications Base</relationshipLabel>
    <relationshipName>Specifications_Base</relationshipName>
    <type>Lookup</type>
</CustomField>