force-app/main/default/objects/SpecificationBase__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stage</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KLWDocStage__c.DocType__c</field>
            <operation>equals</operation>
            <value>Spec</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KLWDocStage__c</referenceTo>
    <relationshipLabel>Specifications Base</relationshipLabel>
    <relationshipName>Specifications_Base</relationshipName>
    <type>Lookup</type>
</CustomField>