force-app/main/default/objects/SpecificationBase__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>Name + IF(NOT(ISBLANK(Revision__c)) &amp;&amp; Revision__c &lt;&gt; &apos;0&apos;, &apos; rev.&apos; + Revision__c, &apos;&apos;)</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>