force-app/main/default/objects/SpecificationBase__c/fields/WheelProduct__c.field-meta.xml
<CustomField>
    <fullName>WheelProduct__c</fullName>
    <formula>IF((ProductKind__r.ID_ERP__c = &apos;2&apos;) &amp;&amp; (ProductType__r.ID_ERP__c &lt;&gt; &apos;P1&apos;), &apos;Wheels&apos;,
  IF((ProductKind__r.ID_ERP__c = &apos;2&apos;) &amp;&amp; (ProductType__r.ID_ERP__c = &apos;P1&apos;), &apos;Tyres&apos;,
    IF(ProductKind__r.ID_ERP__c = &apos;5&apos;, &apos;WheelSets&apos;,
      IF(ProductKind__r.ID_ERP__c = &apos;6&apos;, &apos;Axles&apos;, &apos;N/A&apos;)
      )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wheel Product</label>
    <type>Text</type>
</CustomField>