force-app/main/default/objects/SpecificationBase__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ID__c</columns>
    <columns>NAME</columns>
    <columns>Revision__c</columns>
    <columns>Stage__c</columns>
    <columns>ValidBefore__c</columns>
    <columns>Account__c</columns>
    <columns>Country__c</columns>
    <columns>ProductKind__c</columns>
    <columns>ProductType__c</columns>
    <columns>Parent__c</columns>
    <columns>Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>